include/cblas.h

typedef enum CBLAS_ORDER {
    CblasRowMajor = 101,
    CblasColMajor = 102
} CBLAS_ORDER;
typedef enum CBLAS_TRANSPOSE {
    CblasNoTrans = 111,
    CblasTrans = 112,
    CblasConjTrans = 113,
    CblasConjNoTrans = 114
} CBLAS_TRANSPOSE;
typedef enum CBLAS_UPLO {
    CblasUpper = 121,
    CblasLower = 122
} CBLAS_UPLO;
typedef enum CBLAS_DIAG {
    CblasNonUnit = 131,
    CblasUnit = 132
} CBLAS_DIAG;
typedef enum CBLAS_SIDE {
    CblasLeft = 141,
    CblasRight = 142
} CBLAS_SIDE;
void cblas_chpmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *Ap, const void *x, const int incx, const void *beta, void *y, const int incy);
void cblas_zhpmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *Ap, const void *x, const int incx, const void *beta, void *y, const int incy);
void cblas_chpr(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const void *x, const int incx, void *Ap);
void cblas_zhpr(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const void *x, const int incx, void *Ap);
void cblas_chpr2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *Ap);
void cblas_zhpr2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *Ap);
void cblas_ssbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const int k, const float  alpha, const float  *A, const int lda, const float  *x, const int incx, const float  beta, float  *y, const int incy);
void cblas_dsbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const int k, const double alpha, const double *A, const int lda, const double *x, const int incx, const double beta, double *y, const int incy);
void cblas_sspmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const float  *Ap, const float  *x, const int incx, const float  beta, float  *y, const int incy);
void cblas_dspmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const double *Ap, const double *x, const int incx, const double beta, double *y, const int incy);
void cblas_sspr(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const float  *x, const int incx, float  *Ap);
void cblas_dspr(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const double *x, const int incx, double *Ap);
void cblas_sspr2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const float  *x, const int incx, const float  *y, const int incy, float  *Ap);
void cblas_dspr2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const double *x, const int incx, const double *y, const int incy, double *Ap);
void cblas_ssymv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const float  *A, const int lda, const float  *x, const int incx, const float  beta, float  *y, const int incy);
void cblas_dsymv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const double *A, const int lda, const double *x, const int incx, const double beta, double *y, const int incy);
void cblas_ssyr(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const float  *x, const int incx, float  *A, const int lda);
void cblas_dsyr(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const double *x, const int incx, double *A, const int lda);
void cblas_ssyr2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const float  *x, const int incx, const float  *y, const int incy, float  *A, const int lda);
void cblas_dsyr2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const double *x, const int incx, const double *y, const int incy, double *A, const int lda);
void cblas_stbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const float  *A, const int lda, float  *x, const int incx);
void cblas_dtbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const double *A, const int lda, double *x, const int incx);
void cblas_ctbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const void   *A, const int lda, void   *x, const int incx);
void cblas_ztbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const void   *A, const int lda, void   *x, const int incx);
void cblas_stbsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const float  *A, const int lda, float  *x, const int incx);
void cblas_dtbsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const double *A, const int lda, double *x, const int incx);
void cblas_ctbsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const void   *A, const int lda, void   *x, const int incx);
void cblas_ztbsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const int k, const void   *A, const int lda, void   *x, const int incx);
void cblas_stpmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const float  *Ap, float  *x, const int incx);
void cblas_dtpmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const double *Ap, double *x, const int incx);
void cblas_ctpmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *Ap, void   *x, const int incx);
void cblas_ztpmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *Ap, void   *x, const int incx);
void cblas_stpsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const float  *Ap, float  *x, const int incx);
void cblas_dtpsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const double *Ap, double *x, const int incx);
void cblas_ctpsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *Ap, void   *x, const int incx);
void cblas_ztpsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *Ap, void   *x, const int incx);
void cblas_strmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const float  *A, const int lda, float  *x, const int incx);
void cblas_dtrmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const double *A, const int lda, double *x, const int incx);
void cblas_ctrmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *A, const int lda, void   *x, const int incx);
void cblas_ztrmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *A, const int lda, void   *x, const int incx);
void cblas_strsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const float  *A, const int lda, float  *x, const int incx);
void cblas_dtrsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const double *A, const int lda, double *x, const int incx);
void cblas_ctrsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *A, const int lda, void   *x, const int incx);
void cblas_ztrsv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE transA, const CBLAS_DIAG diag, const int n, const void   *A, const int lda, void   *x, const int incx);
/*
 * Level 3
 */
void cblas_sgemm(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const CBLAS_TRANSPOSE transB, const int m, const int n, const int k, const float   alpha, const float  *A, const int lda, const float  *B, const int ldb, const float   beta, float  *C, const int ldc);
void cblas_dgemm(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const CBLAS_TRANSPOSE transB, const int m, const int n, const int k, const double  alpha, const double *A, const int lda, const double *B, const int ldb, const double  beta, double *C, const int ldc);
void cblas_cgemm(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const CBLAS_TRANSPOSE transB, const int m, const int n, const int k, const void   *alpha, const void   *A, const int lda, const void   *B, const int ldb, const void   *beta, void   *C, const int ldc);
void cblas_zgemm(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const CBLAS_TRANSPOSE transB, const int m, const int n, const int k, const void   *alpha, const void   *A, const int lda, const void   *B, const int ldb, const void   *beta, void   *C, const int ldc);
void cblas_chemm(const CBLAS_ORDER order, const CBLAS_SIDE side, const CBLAS_UPLO uplo, const int m, const int n, const void *alpha, const void *A, const int lda, const void *B, const int ldb, const void *beta, void *C, const int ldc);
void cblas_zhemm(const CBLAS_ORDER order, const CBLAS_SIDE side, const CBLAS_UPLO uplo, const int m, const int n, const void *alpha, const void *A, const int lda, const void *B, const int ldb, const void *beta, void *C, const int ldc);
void cblas_cherk(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE trans, const int n, const int k, const float  alpha, const void *A, const int lda, const float  beta, void *C, const int ldc);
void cblas_zherk(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE trans, const int n, const int k, const double alpha, const void *A, const int lda, const double beta, void *C, const int ldc);
void cblas_cher2k(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE trans, const int n, const int k, const void *alpha, const void *A, const int lda, const void *B, const int ldb, const float  beta, void *C, const int ldc);
void cblas_zher2k(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const CBLAS_TRANSPOSE trans, const int n, const int k, const void *alpha, const void *A, const int lda, const void *B, const int ldb, const double beta, void *C, const int ldc);