src/linalg/cblas.zig


extern fn cblas_chpmv(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf32, ap: [*c]const cf32, x: [*c]const cf32, incx: isize, beta: [*c]const cf32, y: [*c]cf32, incy: isize) void;
extern fn cblas_zhpmv(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf64, ap: [*c]const cf64, x: [*c]const cf64, incx: isize, beta: [*c]const cf64, y: [*c]cf64, incy: isize) void;
pub const chpmv = cblas_chpmv;
pub const zhpmv = cblas_zhpmv;

extern fn cblas_chpr(layout: c_int, uplo: c_int, n: isize, alpha: f32, x: [*c]const cf32, incx: isize, ap: [*c]cf32) void;
extern fn cblas_zhpr(layout: c_int, uplo: c_int, n: isize, alpha: f64, x: [*c]const cf64, incx: isize, ap: [*c]cf64) void;
pub const chpr = cblas_chpr;
pub const zhpr = cblas_zhpr;

extern fn cblas_chpr2(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf32, x: [*c]const cf32, incx: isize, y: [*c]const cf32, incy: isize, ap: [*c]cf32) void;
extern fn cblas_zhpr2(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf64, x: [*c]const cf64, incx: isize, y: [*c]const cf64, incy: isize, ap: [*c]cf64) void;
pub const chpr2 = cblas_chpr2;
pub const zhpr2 = cblas_zhpr2;

extern fn cblas_ssbmv(layout: c_int, uplo: c_int, n: isize, k: isize, alpha: f32, a: [*c]const f32, lda: isize, x: [*c]const f32, incx: isize, beta: f32, y: [*c]f32, incy: isize) void;
extern fn cblas_dsbmv(layout: c_int, uplo: c_int, n: isize, k: isize, alpha: f64, a: [*c]const f64, lda: isize, x: [*c]const f64, incx: isize, beta: f64, y: [*c]f64, incy: isize) void;
pub const ssbmv = cblas_ssbmv;
pub const dsbmv = cblas_dsbmv;

extern fn cblas_sspmv(layout: c_int, uplo: c_int, n: isize, alpha: f32, ap: [*c]const f32, x: [*c]const f32, incx: isize, beta: f32, y: [*c]f32, incy: isize) void;
extern fn cblas_dspmv(layout: c_int, uplo: c_int, n: isize, alpha: f64, ap: [*c]const f64, x: [*c]const f64, incx: isize, beta: f64, y: [*c]f64, incy: isize) void;
pub const sspmv = cblas_sspmv;
pub const dspmv = cblas_dspmv;

extern fn cblas_sspr(layout: c_int, uplo: c_int, n: isize, alpha: f32, x: [*c]const f32, incx: isize, ap: [*c]f32) void;
extern fn cblas_dspr(layout: c_int, uplo: c_int, n: isize, alpha: f64, x: [*c]const f64, incx: isize, ap: [*c]f64) void;
pub const sspr = cblas_sspr;
pub const dspr = cblas_dspr;

extern fn cblas_sspr2(layout: c_int, uplo: c_int, n: isize, alpha: f32, x: [*c]const f32, incx: isize, y: [*c]const f32, incy: isize, ap: [*c]f32) void;
extern fn cblas_dspr2(layout: c_int, uplo: c_int, n: isize, alpha: f64, x: [*c]const f64, incx: isize, y: [*c]const f64, incy: isize, ap: [*c]f64) void;
pub const sspr2 = cblas_sspr2;
pub const dspr2 = cblas_dspr2;

extern fn cblas_ssymv(layout: c_int, uplo: c_int, n: isize, alpha: f32, a: [*c]const f32, lda: isize, x: [*c]const f32, incx: isize, beta: f32, y: [*c]f32, incy: isize) void;
extern fn cblas_dsymv(layout: c_int, uplo: c_int, n: isize, alpha: f64, a: [*c]const f64, lda: isize, x: [*c]const f64, incx: isize, beta: f64, y: [*c]f64, incy: isize) void;
pub const ssymv = cblas_ssymv;
pub const dsymv = cblas_dsymv;

extern fn cblas_ssyr(layout: c_int, uplo: c_int, n: isize, alpha: f32, x: [*c]const f32, incx: isize, a: [*c]f32, lda: isize) void;
extern fn cblas_dsyr(layout: c_int, uplo: c_int, n: isize, alpha: f64, x: [*c]const f64, incx: isize, a: [*c]f64, lda: isize) void;
pub const ssyr = cblas_ssyr;
pub const dsyr = cblas_dsyr;

extern fn cblas_ssyr2(layout: c_int, uplo: c_int, n: isize, alpha: f32, x: [*c]const f32, incx: isize, y: [*c]const f32, incy: isize, a: [*c]f32, lda: isize) void;
extern fn cblas_dsyr2(layout: c_int, uplo: c_int, n: isize, alpha: f64, x: [*c]const f64, incx: isize, y: [*c]const f64, incy: isize, a: [*c]f64, lda: isize) void;
pub const ssyr2 = cblas_ssyr2;
pub const dsyr2 = cblas_dsyr2;

extern fn cblas_stbmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const f32, lda: isize, x: [*c]f32, incx: isize) void;
extern fn cblas_dtbmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const f64, lda: isize, x: [*c]f64, incx: isize) void;
extern fn cblas_ctbmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const cf32, lda: isize, x: [*c]cf32, incx: isize) void;
extern fn cblas_ztbmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const cf64, lda: isize, x: [*c]cf64, incx: isize) void;
pub const stbmv = cblas_stbmv;
pub const dtbmv = cblas_dtbmv;
pub const ctbmv = cblas_ctbmv;
pub const ztbmv = cblas_ztbmv;

extern fn cblas_stbsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const f32, lda: isize, x: [*c]f32, incx: isize) void;
extern fn cblas_dtbsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const f64, lda: isize, x: [*c]f64, incx: isize) void;
extern fn cblas_ctbsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const cf32, lda: isize, x: [*c]cf32, incx: isize) void;
extern fn cblas_ztbsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, k: isize, a: [*c]const cf64, lda: isize, x: [*c]cf64, incx: isize) void;
pub const stbsv = cblas_stbsv;
pub const dtbsv = cblas_dtbsv;
pub const ctbsv = cblas_ctbsv;
pub const ztbsv = cblas_ztbsv;

extern fn cblas_stpmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const f32, x: [*c]f32, incx: isize) void;
extern fn cblas_dtpmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const f64, x: [*c]f64, incx: isize) void;
extern fn cblas_ctpmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const cf32, x: [*c]cf32, incx: isize) void;
extern fn cblas_ztpmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const cf64, x: [*c]cf64, incx: isize) void;
pub const stpmv = cblas_stpmv;
pub const dtpmv = cblas_dtpmv;
pub const ctpmv = cblas_ctpmv;
pub const ztpmv = cblas_ztpmv;

extern fn cblas_stpsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const f32, x: [*c]f32, incx: isize) void;
extern fn cblas_dtpsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const f64, x: [*c]f64, incx: isize) void;
extern fn cblas_ctpsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const cf32, x: [*c]cf32, incx: isize) void;
extern fn cblas_ztpsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, ap: [*c]const cf64, x: [*c]cf64, incx: isize) void;
pub const stpsv = cblas_stpsv;
pub const dtpsv = cblas_dtpsv;
pub const ctpsv = cblas_ctpsv;
pub const ztpsv = cblas_ztpsv;

extern fn cblas_strmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const f32, lda: isize, x: [*c]f32, incx: isize) void;
extern fn cblas_dtrmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const f64, lda: isize, x: [*c]f64, incx: isize) void;
extern fn cblas_ctrmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const cf32, lda: isize, x: [*c]cf32, incx: isize) void;
extern fn cblas_ztrmv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const cf64, lda: isize, x: [*c]cf64, incx: isize) void;
pub const strmv = cblas_strmv;
pub const dtrmv = cblas_dtrmv;
pub const ctrmv = cblas_ctrmv;
pub const ztrmv = cblas_ztrmv;

extern fn cblas_strsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const f32, lda: isize, x: [*c]f32, incx: isize) void;
extern fn cblas_dtrsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const f64, lda: isize, x: [*c]f64, incx: isize) void;
extern fn cblas_ctrsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const cf32, lda: isize, x: [*c]cf32, incx: isize) void;
extern fn cblas_ztrsv(layout: c_int, uplo: c_int, transa: c_int, diag: c_int, n: isize, a: [*c]const cf64, lda: isize, x: [*c]cf64, incx: isize) void;
pub const strsv = cblas_strsv;
pub const dtrsv = cblas_dtrsv;
pub const ctrsv = cblas_ctrsv;
pub const ztrsv = cblas_ztrsv;

// Level 3
extern fn cblas_sgemm(layout: c_int, transa: c_int, transb: c_int, m: isize, n: isize, k: isize, alpha: f32, a: [*c]const f32, lda: isize, b: [*c]const f32, ldb: isize, beta: f32, c: [*c]f32, ldc: isize) void;
extern fn cblas_dgemm(layout: c_int, transa: c_int, transb: c_int, m: isize, n: isize, k: isize, alpha: f64, a: [*c]const f64, lda: isize, b: [*c]const f64, ldb: isize, beta: f64, c: [*c]f64, ldc: isize) void;
extern fn cblas_cgemm(layout: c_int, transa: c_int, transb: c_int, m: isize, n: isize, k: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, b: [*c]const cf32, ldb: isize, beta: [*c]const cf32, c: [*c]cf32, ldc: isize) void;
extern fn cblas_zgemm(layout: c_int, transa: c_int, transb: c_int, m: isize, n: isize, k: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, b: [*c]const cf64, ldb: isize, beta: [*c]const cf64, c: [*c]cf64, ldc: isize) void;
pub const sgemm = cblas_sgemm;
pub const dgemm = cblas_dgemm;
pub const cgemm = cblas_cgemm;
pub const zgemm = cblas_zgemm;

extern fn cblas_chemm(layout: c_int, side: c_int, uplo: c_int, m: isize, n: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, b: [*c]const cf32, ldb: isize, beta: [*c]const cf32, c: [*c]cf32, ldc: isize) void;
extern fn cblas_zhemm(layout: c_int, side: c_int, uplo: c_int, m: isize, n: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, b: [*c]const cf64, ldb: isize, beta: [*c]const cf64, c: [*c]cf64, ldc: isize) void;
pub const chemm = cblas_chemm;
pub const zhemm = cblas_zhemm;

extern fn cblas_cherk(layout: c_int, uplo: c_int, trans: c_int, n: isize, k: isize, alpha: f32, a: [*c]const cf32, lda: isize, beta: f32, c: [*c]cf32, ldc: isize) void;
extern fn cblas_zherk(layout: c_int, uplo: c_int, trans: c_int, n: isize, k: isize, alpha: f64, a: [*c]const cf64, lda: isize, beta: f64, c: [*c]cf64, ldc: isize) void;
pub const cherk = cblas_cherk;
pub const zherk = cblas_zherk;

extern fn cblas_cher2k(layout: c_int, uplo: c_int, trans: c_int, n: isize, k: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, b: [*c]const cf32, ldb: isize, beta: f32, c: [*c]cf32, ldc: isize) void;
extern fn cblas_zher2k(layout: c_int, uplo: c_int, trans: c_int, n: isize, k: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, b: [*c]const cf64, ldb: isize, beta: f64, c: [*c]cf64, ldc: isize) void;
pub const cher2k = cblas_cher2k;
pub const zher2k = cblas_zher2k;

extern fn cblas_ssymm(layout: c_int, side: c_int, uplo: c_int, m: isize, n: isize, alpha: f32, a: [*c]const f32, lda: isize, b: [*c]const f32, ldb: isize, beta: f32, c: [*c]f32, ldc: isize) void;
extern fn cblas_dsymm(layout: c_int, side: c_int, uplo: c_int, m: isize, n: isize, alpha: f64, a: [*c]const f64, lda: isize, b: [*c]const f64, ldb: isize, beta: f64, c: [*c]f64, ldc: isize) void;
extern fn cblas_csymm(layout: c_int, side: c_int, uplo: c_int, m: isize, n: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, b: [*c]const cf32, ldb: isize, beta: [*c]const cf32, c: [*c]cf32, ldc: isize) void;
extern fn cblas_zsymm(layout: c_int, side: c_int, uplo: c_int, m: isize, n: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, b: [*c]const cf64, ldb: isize, beta: [*c]const cf64, c: [*c]cf64, ldc: isize) void;
pub const ssymm = cblas_ssymm;
pub const dsymm = cblas_dsymm;
pub const csymm = cblas_csymm;
pub const zsymm = cblas_zsymm;
